Plain SW Kernel implemented

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
+include_directories (.)
+include_directories ("${PROJECT_SOURCE_DIR}/include")
+
+add_subdirectory (Kernels)
+
 add_executable (Versalign main.cpp)
+target_link_libraries (Versalign SWKernel)
