Added Timer, util, refactoring. Halfway through SSE SW scoring implementation.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ include_directories (.)
 include_directories ("${PROJECT_SOURCE_DIR}/include")
 
 add_subdirectory (Kernels)
+add_subdirectory (Timer)
 
-add_executable (Versalign main.cpp)
-target_link_libraries (Versalign SWKernel)
+add_executable (Versalign main.cpp util/versalignUtil.cpp)
+target_link_libraries (Versalign Kernels)
+target_link_libraries (Versalign Timer)
