Progressing on SSE alignment kernel. Pointer matrix looks ok, best read and ref pos still errors

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 include_directories (.)
 include_directories ("${PROJECT_SOURCE_DIR}/include")
 
+add_subdirectory (util)
 add_subdirectory (Kernels)
 add_subdirectory (Timer)
 
-add_executable (Versalign main.cpp util/versalignUtil.cpp)
+add_executable (Versalign main.cpp)
 target_link_libraries (Versalign Kernels)
 target_link_libraries (Versalign Timer)
+target_link_libraries (Versalign Utils)
