--- a/src/Timer/CMakeLists.txt
+++ b/src/Timer/CMakeLists.txt
@@ -1,1 +1,4 @@
+MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
+MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
+
 add_library(Timer Timer.cpp)
