Included Vendor files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,11 +20,11 @@ message(STATUS "This is include dir " ${OPENCL_INCLUDE_DIR})
 IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
 	SET(OPENCL_LIB_SEARCH_PATH
 		${OPENCL_LIB_SEARCH_PATH}
-		${PROJECT_SOURCE_DIR}/opencl-AMD-sdk/x86)
+		${PROJECT_SOURCE_DIR}/opencl-AMD-sdk/x86/lib)
 ELSEIF(CMAKE_SIZEOF_VOID_P EQUAL 8)
   SET(OPENCL_LIB_SEARCH_PATH
 		${OPENCL_LIB_SEARCH_PATH}
-		${PROJECT_SOURCE_DIR}/opencl-AMD-sdk/x86_64)
+		${PROJECT_SOURCE_DIR}/opencl-AMD-sdk/x86_64/lib)
 ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 4)
 
 
