--- a/src/Kernels/OpenCL/CMakeLists.txt
+++ b/src/Kernels/OpenCL/CMakeLists.txt
@@ -1,6 +1,4 @@
 MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 
-add_subdirectory (plain)
-add_subdirectory (SSE)
-add_subdirectory (OpenCL)
+add_library(openCLKernel ocl_testing.cpp)
