Major refactoring: Separation of OpenCL C source files. Making alignments more customizable via Parameters class (customize scores). Preparing to encapsulate plain Kernel in shared object.

--- a/src/Kernels/OpenCL/CMakeLists.txt
+++ b/src/Kernels/OpenCL/CMakeLists.txt
@@ -7,15 +7,33 @@ MESSAGE (STATUS "project binary dir" ${PROJECT_BINARY_DIR})
 add_executable(hexify hexify/hexify.cpp)
 
 ADD_CUSTOM_COMMAND(
-	OUTPUT ${PROJECT_BINARY_DIR}/test_kernel.h
-	COMMAND $<TARGET_FILE:hexify> ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/test_kernel
-	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/test_kernel.h ${PROJECT_BINARY_DIR}/test_kernel.h
+	OUTPUT ${PROJECT_BINARY_DIR}/opencl_definitions.h
+	COMMAND $<TARGET_FILE:hexify> ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/opencl_definitions
+	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/opencl_definitions.h ${PROJECT_BINARY_DIR}/opencl_definitions.h
 	DEPENDS hexify
-	COMMENT "Hexifying test_kernel"
-	MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/test_kernel.cl
+	COMMENT "Hexifying opencl_definitions"
+	MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/opencl_definitions.cl
 )
 
-add_library(openCLKernel STATIC ${PROJECT_BINARY_DIR}/test_kernel.h ocl_testing.cpp)	
+ADD_CUSTOM_COMMAND(
+	OUTPUT ${PROJECT_BINARY_DIR}/scoring_kernels.h
+	COMMAND $<TARGET_FILE:hexify> ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/scoring_kernels
+	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/scoring_kernels.h ${PROJECT_BINARY_DIR}/scoring_kernels.h
+	DEPENDS hexify
+	COMMENT "Hexifying scoring_kernels"
+	MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/scoring_kernels.cl
+)
+
+ADD_CUSTOM_COMMAND(
+	OUTPUT ${PROJECT_BINARY_DIR}/alignment_kernels.h
+	COMMAND $<TARGET_FILE:hexify> ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/alignment_kernels
+	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/alignment_kernels.h ${PROJECT_BINARY_DIR}/alignment_kernels.h
+	DEPENDS hexify
+	COMMENT "Hexifying alignment_kernels"
+	MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/opencl_c/alignment_kernels.cl
+)
+
+add_library(openCLKernel STATIC ${PROJECT_BINARY_DIR}/opencl_definitions.h ${PROJECT_BINARY_DIR}/scoring_kernels.h ${PROJECT_BINARY_DIR}/alignment_kernels.h ocl_testing.cpp)	
 
 
 
