Loading plain Kernel now as dynamic link library. Implemented Alignment algorithm flag.

--- a/src/Kernels/plain/CMakeLists.txt
+++ b/src/Kernels/plain/CMakeLists.txt
@@ -1,5 +1,5 @@
 MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 
-add_library(plainKernel SWKernel.cpp)
+add_library(plainKernel SHARED SWKernel.cpp SWKernel_dllexport.cpp)
 target_link_libraries (plainKernel Utils)
