Full refactoring and encapsulation of default Kernel. No more references in impl project.

--- a/src/Kernels/default/CMakeLists.txt
+++ b/src/Kernels/default/CMakeLists.txt
@@ -1,5 +1,4 @@
 MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 
-add_library(plainKernel SHARED SWKernel.cpp SWKernel_dllexport.cpp)
-target_link_libraries (plainKernel Utils)
+add_library(DefaultKernel SHARED DefaultKernel.cpp DefaultKernel_dllexport.cpp)
