--- a/src/impl/CMakeLists.txt
+++ b/src/impl/CMakeLists.txt
@@ -2,8 +2,8 @@ MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 
 add_executable (Versalign main.cpp dll_handling.cpp)
-message(STATUS "Linking plain Kernel")
-target_link_libraries (Versalign plainKernel)
+#message(STATUS "Linking plain Kernel")
+#target_link_libraries (Versalign plainKernel)
 message(STATUS "Linking openCL Kernel")
 target_link_libraries (Versalign openCLKernel)
 message(STATUS "Linking SSE Kernel")
