Encapsulated SSE and AVX Kernels in SO. AVX Kernel is still having issues. Assuming problems with align32.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,14 +55,14 @@ include(CheckCompilerFlag)
 CHECK_COMPILER_FLAG(-mavx AVX_FLAG)
 CHECK_COMPILER_FLAG(-mavx2 AVX2_FLAG)
 
-#if (AVX_FLAG AND AVX2_FLAG)
-#	message("AVX2 support detected")
-#	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx -mavx2")
-#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
-#	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
-#else()
-#	message("No AVX2 support detected")
-#endif()
+if (AVX_FLAG AND AVX2_FLAG)
+	message("AVX2 support detected")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx -mavx2")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
+else()
+	message("No AVX2 support detected")
+endif()
 
 add_subdirectory (util)
 add_subdirectory (Kernels)
