--- a/src/Kernels/AVX-SSE/CMakeLists.txt
+++ b/src/Kernels/AVX-SSE/CMakeLists.txt
@@ -4,6 +4,5 @@ MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx -mavx2")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
     
-add_library(SSEKernel SSEKernel.cpp)
-add_library(AVXKernel AVXKernel.cpp)
-target_link_libraries (SSEKernel Utils)
+add_library(SSEKernel SHARED SSEKernel.cpp SSEKernel_dllexport.cpp)
+add_library(AVXKernel SHARED AVXKernel.cpp AVXKernel_dllexport.cpp)
