--- a/src/impl/CMakeLists.txt
+++ b/src/impl/CMakeLists.txt
@@ -7,9 +7,9 @@ add_executable (Versalign main.cpp dll_handling.cpp)
 message(STATUS "Linking openCL Kernel")
 target_link_libraries (Versalign openCLKernel)
 message(STATUS "Linking SSE Kernel")
-target_link_libraries (Versalign SSEKernel)
+#target_link_libraries (Versalign SSEKernel)
 message(STATUS "Linking AVX Kernel")
-#target_link_libraries (Versalign AVXKernel)
+target_link_libraries (Versalign AVXKernel)
 message(STATUS "Linking Utils")
 target_link_libraries (Versalign Timer)
 target_link_libraries (Versalign Utils)
