Refactored AVX2 Kernel. Still occasional segfaults on _mm256_load_si256 instruction when initializing AVXKernel object on Mac OS.

--- a/src/impl/CMakeLists.txt
+++ b/src/impl/CMakeLists.txt
@@ -1,15 +1,15 @@
 MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 
-add_executable (Versalign main.cpp dll_handling.cpp)
+add_executable (Versalign main.cpp dll_handling.cpp AVXSupportChecker.cpp)
 #message(STATUS "Linking plain Kernel")
 #target_link_libraries (Versalign plainKernel)
 message(STATUS "Linking openCL Kernel")
 target_link_libraries (Versalign openCLKernel)
-message(STATUS "Linking SSE Kernel")
+#message(STATUS "Linking SSE Kernel")
 #target_link_libraries (Versalign SSEKernel)
-message(STATUS "Linking AVX Kernel")
-target_link_libraries (Versalign AVXKernel)
+#message(STATUS "Linking AVX Kernel")
+#target_link_libraries (Versalign AVXKernel)
 message(STATUS "Linking Utils")
 target_link_libraries (Versalign Timer)
 target_link_libraries (Versalign Utils)
