Added LDL flag for dynamic load in Linux

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,7 +59,7 @@ if (AVX_FLAG AND AVX2_FLAG)
 	message("AVX2 support detected")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx -mavx2")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mavx -mavx2")
 else()
 	message("No AVX2 support detected")
 endif()
