Full AVX2 Kernel SO implemented and tested on Linux and Apple (still occasional segfaults on Apple). Runtime-testing for AVX2 instruction support implemented, only tested for Intel CPUs. Compilation -avx and -avx2 flag testing implemented. Next up: OpenCL Kernel.

--- a/src/Kernels/AVX-SSE/CMakeLists.txt
+++ b/src/Kernels/AVX-SSE/CMakeLists.txt
@@ -1,8 +1,11 @@
 MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mavx -mavx2")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -mavx2")
+if (AVX_FLAG AND AVX2_FLAG)
+	message("Compiling AVX Kernel")
+	add_library(AVXKernel SHARED AVXKernel.cpp AVXKernel_dllexport.cpp)	
+else()
+	message("No AVX support, ignoring AVX Kernel")
+endif()
     
 add_library(SSEKernel SHARED SSEKernel.cpp SSEKernel_dllexport.cpp)
-add_library(AVXKernel SHARED AVXKernel.cpp AVXKernel_dllexport.cpp)
