--- a/src/impl/CMakeLists.txt
+++ b/src/impl/CMakeLists.txt
@@ -4,8 +4,8 @@ MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 add_executable (Versalign main.cpp dll_handling.cpp AVXSupportChecker.cpp FastaProvider.h)
 #message(STATUS "Linking plain Kernel")
 #target_link_libraries (Versalign plainKernel)
-message(STATUS "Linking openCL Kernel")
-target_link_libraries (Versalign openCLKernel)
+#message(STATUS "Linking openCL Kernel")
+#target_link_libraries (Versalign openCLKernel)
 #message(STATUS "Linking SSE Kernel")
 #target_link_libraries (Versalign SSEKernel)
 #message(STATUS "Linking AVX Kernel")
@@ -14,4 +14,3 @@ message(STATUS "Linking Utils")
 target_link_libraries (Versalign Timer)
 target_link_libraries (Versalign Utils)
 target_link_libraries (Versalign "-ldl")
-target_link_libraries(Versalign ${OPENCL_LIBRARY})
