--- a/src/impl/CMakeLists.txt
+++ b/src/impl/CMakeLists.txt
@@ -4,8 +4,9 @@ MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
 add_executable (Versalign main.cpp dll_handling.cpp AVXSupportChecker.cpp FastaProvider.h)
 #message(STATUS "Linking plain Kernel")
 #target_link_libraries (Versalign plainKernel)
-#message(STATUS "Linking openCL Kernel")
-#target_link_libraries (Versalign testOCL)
+message(STATUS "Linking openCL Kernel")
+target_link_libraries (Versalign testOCL)
+target_link_libraries (Versalign OpenCLKernel)
 #message(STATUS "Linking SSE Kernel")
 #target_link_libraries (Versalign SSEKernel)
 #message(STATUS "Linking AVX Kernel")
