Huge refactoring in main. Now contains some regular testcalls and a timing module. Still need to investigate what's going on with the Aligment output. Very weird.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,19 @@
-MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
-MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
+cmake_minimum_required (VERSION 2.8.11)
+
+###################
+# Setup environment
+###################
+
+# Modules
 
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/src/cmake")
 
+# Includes
+
 include_directories (.)
 include_directories ("${PROJECT_SOURCE_DIR}/include")
+
+# Check for AVX support
 
 include(CheckCompilerFlag)
 
@@ -20,6 +29,8 @@ else()
 	message("No AVX2 support detected")
 endif()
 
+# Check for OpenMP support
+
 include(FindOpenMP)
 if(OPENMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -27,7 +38,14 @@ if(OPENMP_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
+# Set to C++11 version
+
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+# -O3 apparently doesn't work with SSE instructions ("Illegal instruction") on gcc/g++
+
+SET(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
+SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
 
 add_subdirectory (util)
 add_subdirectory (Kernels)
