--- a/src/Kernels/default/CMakeLists.txt
+++ b/src/Kernels/default/CMakeLists.txt
@@ -1,9 +1,3 @@
-MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
-MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
-
-# -O3 apparently doesn't work with SSE instructions ("Illegal instruction") on gcc/g++
-
-SET(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
-SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
+cmake_minimum_required (VERSION 2.8.11)
 
 add_library(DefaultKernel SHARED DefaultKernel.cpp DefaultKernel_dllexport.cpp)
