--- a/src/impl/CMakeLists.txt
+++ b/src/impl/CMakeLists.txt
@@ -1,17 +1,6 @@
-MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
-MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
+cmake_minimum_required (VERSION 2.8.11)
 
 add_executable (Versalign main.cpp)
-#message(STATUS "Linking plain Kernel")
-#target_link_libraries (Versalign plainKernel)
-#message(STATUS "Linking openCL Kernel")
-#target_link_libraries (Versalign testOCL)
-#target_link_libraries (Versalign OpenCLKernel)
-#message(STATUS "Linking SSE Kernel")
-#target_link_libraries (Versalign SSEKernel)
-#message(STATUS "Linking AVX Kernel")
-#target_link_libraries (Versalign AVXKernel)
-message(STATUS "Linking Utils")
-#target_link_libraries (Versalign Timer)
+
 target_link_libraries (Versalign Utils)
 target_link_libraries (Versalign "-ldl")
